--- a/css/morpheus-style.css
+++ b/css/morpheus-style.css
@@ -72,8 +72,8 @@
 .box-txt .box-agree p{width:100%;font-size:0.845rem;line-height: 20.72px;color:#909090;font-style: normal;font-weight: normal;}
 
 @media screen and (max-width:320px){
-  .img-KP-APP-SC-130-main{width:97%;}
-  .m23.wrapper p{top:73%;left:51.33%;font-size:0.83rem;line-height: 19.5px;}
+    .img-KP-APP-SC-130-main{width:97%;}
+    .m23.wrapper p{top:73%;left:51.33%;font-size:0.83rem;line-height: 19.5px;}
 }
 
 /* 회원가입 약관동의 KP-APP-D-SC-1005 Style Code */
@@ -84,7 +84,7 @@
 .all-agree p{font-size:0.95rem;font-weight:500;line-height: 1rem;}
 
 @media (prefers-reduced-motion: reduce) {
-  .custom-control-label::before{transition: none;}
+    .custom-control-label::before{transition: none;}
 }
 
 .sub-agree{width:100%; ;display:flex;flex-direction:column;position:relative;}
@@ -97,13 +97,33 @@
 .sub-agree li input,.sub-agree li label p{border:0;font-size:0.7rem;}
 .sub-agree .sub1-agree{background-color:#fff;}
 .sub-agree .sub1-agree li img{width:4%; ;color:#383838;display:inline-block;margin:0 5px;}
-.sub-agree .sub2-agree{background-color:#eaeaea;padding-left:20px;}
+/*.sub-agree .sub2-agree {background-color:#eaeaea;padding-left:20px;}*/
 .sub-agree .sub2-agree .m_title{font-size:0.85rem;padding:0 0;font-weight:500}
 .sub-agree .sub2-agree li:first-child{padding-left:0;}
 
+.sub-agree .sub2-agree {
+    position: relative;
+    background-color:#FFF;
+    padding-left:20px;
+}
+.sub-agree .sub2-agree:before {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 1px;
+    border-top: 2px solid #f5f5f5;
+    position: absolute;
+    top: -1px;
+    left: 0;
+}
+.sub-agree .sub2-agree > li > h4 {
+    font-size: 0.85rem;
+}
+
 /* 서비스 이용약관 팝업 KP-APP-D-SC-1006 Style Code */
 .m27.wrapper{width:100%;height:100vh;background:#f5f5f5;}
-.terms-container{width:100%;padding:20px;background:#f5f5f5;margin-top:1rem}
+/*.terms-container{width:100%;padding:20px;background:#f5f5f5;margin-top:1rem}*/
+.terms-container{width:100%;padding:20px;background:#f5f5f5;}
 .terms-container .terms-tit{width:100%; ;display:flex;justify-content: space-between;padding:10px 0;align-items: flex-end;}
 .terms-container .terms-name p{font-size:1rem;font-weight:500;line-height:22.2px;}
 .terms-container .terms-date p{font-size:0.7rem;color:#909090;line-height:16.28px;font-weight:500;}
@@ -112,50 +132,135 @@
 .terms-container .terms-txt textarea{width:100%;;height:90%;resize: none;font-size:0.7rem;margin-top:20px;line-height:16.28px;}
 
 /* 약관 컨텐츠 공통 element style */
-.terms-txt.policy-box {
-    height: auto;
+.terms-container .terms-txt.scroll-box {
+    padding: 0;
+    display: flex;
+    height: 12rem;
+    margin: 0;
+    flex: 1;
 }
-.terms-txt > dl {
+.flex-column-box > .terms-tit {
+    flex: 0 0 auto;
+    margin-bottom: auto;
+}
+.scroll-box .policy-box {
+    padding: 15px 18px;
+    width: 100%;
+    height: auto;
+    display: block;
+    overflow-x: hidden;
+    overflow-y: auto;
+    flex: 1;
+}
+.flex-column-box > .btn-app {
+    background-color: transparent;
+    margin: 0 auto;
+    display: flex;
+    flex: none;
+    height: 80px;
+    width: 100%;
+    padding: 0 2em;
+    align-items: center;
+}
+.policy-box > .terms-index {
+    font-size: 0.72rem;
+    margin-bottom: 1.24em;
+}
+.terms-index > ul > li > a {
+    display: block;
+    border-bottom: 1px solid #ddd;
+    padding: 6px 0;
+}
+.terms-index > ul > li:last-child > a {
+    border-bottom: none;
+}
+
+.terms-index a > span > label,
+.terms-index a > span {
+    color: #383838;
+}
+.terms-index a:hover > span > label,
+.terms-index a:hover > span {
+    color: #dd695d;
+}
+.terms-index a > span {
+    display: flex;
+}
+.terms-index a > span > label {
+    text-align: right;
+    width: 1.75em;
+    margin-right: 0.2em;
+}
+.terms-index a:hover {
+    text-decoration: none;
+}
+
+.policy-box > dl {
     display: block;
     border-top: 1px solid transparent;
 }
-.terms-txt > dl > dt {
+.policy-box > dl > dt {
     font-weight: 500;
-    font-size: 0.92rem;
+    font-size: 0.84rem;
     margin: 0.5em 0;
 }
-.terms-txt > dl > dd {
+.policy-box > dl > dd {
     position: relative;
     font-family: inherit;
-    font-size: 0.84rem;
+    font-size: 0.78rem;
     line-height: 16.28px;
 }
-.terms-txt > dl > dd.use-num {
-    padding-left: 2em;
+.policy-box > dl > dd.use-num {
+    padding-left: 1.72em;
 }
-.terms-txt > dl > dd.use-num > span {
+.policy-box > dl > dd.use-num > span {
     display: block;
     position: absolute;
-    width: 1.72em;
+    width: 1.48em;
     border: none;
     left: 0;
     top: 0;
     text-align: right;
 }
-.terms-txt > dl > dd > ol {
+.policy-box > dl > dd > table {
+    border-top: 1px solid #ddd;
+    font-size: 0.72rem;
+    margin: 1em 0 1.25em;
+}
+.policy-box > dl > dd > table th {
+    background-color: #fafafa;
+    border-bottom: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    text-align: center;
+    word-break: keep-all;
+}
+.policy-box > dl > dd > table th,
+.policy-box > dl > dd > table td {
+    padding: 0.5em;
+}
+.policy-box > dl > dd > table td {
+    border-right: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    text-align: center;
+}
+.policy-box > dl > dd > table th.no-border,
+.policy-box > dl > dd > table td.no-border {
+    border-right: none !important;
+}
+.policy-box > dl > dd > ol {
     display: block;
     margin: 0.54em 0;
 }
-.terms-txt > dl > dd > ol > li {
+.policy-box > dl > dd > ol > li {
     font-size: 0.72rem;
     position: relative;
     display: block;
     font-weight: 400;
-    padding-left: 1.8em;
+    padding-left: 1.68em;
     line-height: 16.28px;
-    margin: 0.42em 0;
+    margin: 0.25em 0 0.75em;
 }
-.terms-txt > dl > dd > ol > li > span {
+.policy-box > dl > dd > ol > li > span {
     display: block;
     position: absolute;
     width: 1.42em;
@@ -164,9 +269,49 @@
     top: 0;
     text-align: right;
 }
-.terms-txt > dl > dd > ol > li > span:after {
-    content: '.';
+.policy-box > dl > dd > ol > li > h4 {
+    font-size: 0.72rem;
+    text-indent: -0.72em;
 }
+.policy-box .child-list {
+    padding-left: 0.42em;
+}
+.policy-box .child-list li {
+    position: relative;
+    margin: 0.4em 0;
+}
+.child-list span {
+    position: absolute;
+    left: -1.5em;
+}
+.child-list h4 {
+    font-size: 1em;
+    text-indent: -0.54em;
+}
+.child-list.hyphen-list {
+    padding-left: 0.72em;
+}
+.child-list.hyphen-list > li:before {
+    content: '';
+    position: absolute;
+    width: 4px;
+    height: 1px ;
+    border-bottom: 1px solid #333;
+    top: 8px;
+    left: -0.75em;
+}
+.policy-box .dot-list li:before{
+    content: '';
+    display: block;
+    position: absolute;
+    width: 4px;
+    height: 4px;
+    left: -8px;
+    top: 7px;
+    background-color: #383838;
+    border-radius: 50%;
+}
+
 /* 가입완료 KP-APP-D-SC-1007 Style Code */
 .terms-container .terms-txt.privercy{height:33rem;}
 .terms-container .terms-txt.privercy textarea{margin-top:0;}
@@ -198,9 +343,9 @@
     border:1px solid #d2d2d2;
     border-radius:100%;padding:0 3px;
     outline:none;
-	display:inline-block;
+    display:inline-block;
     background:#fff;
-  }
+}
 .basic-info .box-info .radio_box input[type='radio']:checked{border:1px solid #dd695d;}
 .basic-info .box-info .radio_box input[type='radio']:before { content:'';width:9px;height:9px;border-radius:50%;display:inline-block;background-color:#d2d2d2 }
 .basic-info .box-info .radio_box input[type='radio']:checked:before {background:#dd695d;}
@@ -292,7 +437,7 @@
 .search-wrap .box-place ul.place-code{width:45%;}
 .search-wrap .box-place ul.place-code li{color:#dd695d;}
 .search-wrap .box-place ul li{padding:10px 0;font-size:0.9rem;}
-.search-wrap .place-blank{width:100%; ;text-align:center;font-size:0.9rem;color:#383838;padding:15px 0;} 
+.search-wrap .place-blank{width:100%; ;text-align:center;font-size:0.9rem;color:#383838;padding:15px 0;}
 
 /* 가입완료 KP-APP-D-SC-1017 Face-id Style Code */
 .bio-pass button.password-login{margin-top: 30px;font-weight: 700;}
@@ -377,7 +522,7 @@
 .codepass-modal .box-txt i{width:100%;font-size:0.9rem;text-align: center;line-height: 20.72px;padding:40px 0;}
 .codepass-modal .box-txt button{width:45%;height:15%;background:#dd695d;color:#fff;padding:12px 0;border-radius:4px;font-size:0.9rem;margin-bottom: 10px;}
 .codepass-modal .box-txt button a{color:#fff;}
- 
+
 /* KP-APP-D-SC-3000 Post/Shopping Code Password Modal Style Code */
 .codepass-modal .box-txt ul.post_shopping li{width:12%;padding:15px 5px;}
 
@@ -496,8 +641,8 @@
 .history-container.m_post .mail-tit span{font-size:0.7rem;font-weight:500;color:#909090;}
 
 @media screen and (max-width:320px){
-  .history-container.m_post .mail-tit p{width:75%;font-size:0.86rem;}
-  .history-container.m_post i{font-size:0.85rem;line-height:20px;}
+    .history-container.m_post .mail-tit p{width:75%;font-size:0.86rem;}
+    .history-container.m_post i{font-size:0.85rem;line-height:20px;}
 }
 
 /* 예금 가입내역 KP-APP-D-SC-4004 Style Code */
@@ -534,7 +679,7 @@
 .m68.wrapper .btn-app{margin:auto auto 80px auto;}
 
 @media screen and (max-width:320px){
-  .mydata-intro .data-img img{height:90%;}
+    .mydata-intro .data-img img{height:90%;}
 }
 
 /* 회원정보 더보기 KP-APP-D-SC-6000 Style Code */
